--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "filament/filament": "^3.2",
         "laravel/framework": "^11.31",
         "laravel/socialite": "^5.16",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-medialibrary": "^11.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
