--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
         "laravel/framework": "^11.31",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.6",
+        "smalot/pdfparser": "^2.11",
+        "spatie/laravel-backup": "^9.2",
         "spatie/laravel-medialibrary": "^11.12",
         "staudenmeir/laravel-adjacency-list": "^1.23"
     },
